# resgenie

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
resgenie/: __init__.py  __main__.py  converter.py  core.py
resgenie/style/: style.css
tests/resources/: __init__.py  resume.yml
tests/unit/: test_core.py
